hover to run the pattern preview

--- a/src/life-patterns/life-patterns.html
+++ b/src/life-patterns/life-patterns.html
@@ -58,7 +58,7 @@
     .card life-preview-canvas {
       display: block;
       width: 100%;
-      pointer-events: none;
+      /*pointer-events: none;*/
       @apply(--paper-card-header-image);
     }
 
