--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -345,7 +345,7 @@
           title: timestamp,
           rle: rle,
           dataUrl: dataUrl,
-          shareUrl: 'http://kumassy.com/life2/?state=paused&data=' + rle,
+          shareUrl: 'http://kumassy.com/life/?state=paused&data=' + rle,
           createdAt: new Date(),
           updatedAt: new Date(),
         });
