--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -140,7 +140,7 @@
           <life-preview-canvas width="240" height="240" auto-play rle="18bo8b$17b3o7b$12b3o4b2o6b$11bo2b3o2bob2o4b$10bo3bobo2bobo5b$10bo4bobobobob2o2b$12bo4bobo3b2o2b$4o5bobo4bo3bob3o2b$o3b2obob3ob2o9b2ob$o5b2o5bo13b$bo2b2obo2bo2bob2o10b$7bobobobobobo5b4o$bo2b2obo2bo2bo2b2obob2o3bo$o5b2o3bobobo3b2o5bo$o3b2obob2o2bo2bo2bob2o2bob$4o5bobobobobobo7b$10b2obo2bo2bob2o2bob$13bo5b2o5bo$b2o9b2ob3obob2o3bo$2b3obo3bo4bobo5b4o$2b2o3bobo4bo12b$2b2obobobobo4bo10b$5bobo2bobo3bo10b$4b2obo2b3o2bo11b$6b2o4b3o12b$7b3o17b$8bo!"></life-preview-canvas>
           <life-preview-canvas width="240" height="240" auto-play rle="15b2o3b2o15b3$6b2o21b2o6b$6b2o21b2o6b2$3b2o27b2o3b$3b2o9b2o5b2o9b2o3b$9b3ob2o7b2ob3o9b$8bobo15bobo8b$8b2o17b2o8b$8bo19bo8b2$8bo19bo8b$7b2o19b2o7b$o6bo21bo6bo$o35bo4$o35bo$o6bo21bo6bo$7b2o19b2o7b$8bo19bo8b2$8bo19bo8b$8b2o17b2o8b$8bobo15bobo8b$9b3ob2o7b2ob3o9b$3b2o9b2o5b2o9b2o3b$3b2o27b2o3b2$6b2o21b2o6b$6b2o21b2o6b3$15b2o3b2o!"></life-preview-canvas> -->
 
-          <!-- <life-brush-editor rle="[[app._selectedPattern.payload]]" app="{{app}}"></life-brush-editor> -->
+          <life-brush-editor pattern="[[app._selectedPattern]]" app="{{app}}"></life-brush-editor>
 
           <nav>
             <paper-button id="togglecontroller" on-tap="_togglePlaying" toggles style="float: left;">Pause</paper-button>
@@ -287,7 +287,11 @@
           {
             id: 'pencil',
             name: 'Pencil',
-            payload: ["1"]
+            payload: ["1"],
+            meta: {
+              x: 1,
+              y: 1
+            }
           },
           {
             id: 'glider',
@@ -295,7 +299,11 @@
             payload: [
               "010",
               "001",
-              "111"]
+              "111"],
+            meta: {
+              x: 3,
+              y: 3
+            }
           },
           {
             id: 'light_weight_spaceship',
@@ -304,7 +312,12 @@
               "01001",
               "10000",
               "10001",
-              "11110"]
+              "11110"
+            ],
+            meta: {
+              x: 5,
+              y: 4
+            }
           },
           {
             id: 'glider_gun',
@@ -318,7 +331,12 @@
               "110000000010001011000010100000000000",
               "000000000010000010000000100000000000",
               "000000000001000100000000000000000000",
-              "000000000000110000000000000000000000"]
+              "000000000000110000000000000000000000"
+            ],
+            meta: {
+              x: 36,
+              y: 9
+            }
           }
         ].concat(r.detail.response);
 
