--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -13,7 +13,7 @@
         <div>Hello World!</div>
       </paper-toolbar>
       <!-- <life-canvas-base></life-canvas-base> -->
-      <life-preview-canvas width="240" height="240" auto-play rle="[[rle]]"></life-preview-canvas>
+      <life-preview-canvas id="canvas" width="240" height="240" auto-play rle="[[pattern.payload]]" pattern-width="[[pattern.meta.x]]" pattern-height="[[pattern.meta.y]]"></life-preview-canvas>
 
       <div>R</div>
       <paper-slider class="red" value="{{red}}" max="255" editable></paper-slider>
@@ -57,9 +57,12 @@
         app: {
           type: Object
         },
-        rle: {
-          type: String,
-          value: '15b2o3b2o15b3$6b2o21b2o6b$6b2o21b2o6b2$3b2o27b2o3b$3b2o9b2o5b2o9b2o3b$9b3ob2o7b2ob3o9b$8bobo15bobo8b$8b2o17b2o8b$8bo19bo8b2$8bo19bo8b$7b2o19b2o7b$o6bo21bo6bo$o35bo4$o35bo$o6bo21bo6bo$7b2o19b2o7b$8bo19bo8b2$8bo19bo8b$8b2o17b2o8b$8bobo15bobo8b$9b3ob2o7b2ob3o9b$3b2o9b2o5b2o9b2o3b$3b2o27b2o3b2$6b2o21b2o6b$6b2o21b2o6b3$15b2o3b2o!',
+        // rle: {
+        //   type: String,
+        //   value: '15b2o3b2o15b3$6b2o21b2o6b$6b2o21b2o6b2$3b2o27b2o3b$3b2o9b2o5b2o9b2o3b$9b3ob2o7b2ob3o9b$8bobo15bobo8b$8b2o17b2o8b$8bo19bo8b2$8bo19bo8b$7b2o19b2o7b$o6bo21bo6bo$o35bo4$o35bo$o6bo21bo6bo$7b2o19b2o7b$8bo19bo8b2$8bo19bo8b$8b2o17b2o8b$8bobo15bobo8b$9b3ob2o7b2ob3o9b$3b2o9b2o5b2o9b2o3b$3b2o27b2o3b2$6b2o21b2o6b$6b2o21b2o6b3$15b2o3b2o!',
+        // },
+        pattern: {
+          type: Object
         },
         red: {
           type: Number,
