--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../bower_components/paper-slider/paper-slider.html">
 
 <link rel="import" href="../../bower_components/paper-styles/default-theme.html">
-<link rel="import" href="../../bower_components/paper-styles/typography.html">
+<link rel="import" href="../../bower_components/paper-styles/shadow.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
@@ -34,15 +34,31 @@
       <paper-slider class="blue" value="{{blue}}" max="255" editable></paper-slider> -->
     <!-- </paper-header-panel> -->
 
+    <!-- <paper-header-panel mode="seamed"> -->
+      <paper-toolbar>
+        <div class="title">Brush Editor</div>
+      </paper-toolbar>
 
-    <div class="toolbar">
-      <paper-icon-button icon="create"></paper-icon-button>
-      <paper-icon-button icon="delete"></paper-icon-button>
-      <div class="padding"></div>
-      <paper-icon-button icon="settings"></paper-icon-button>
-    </div>
-
-    <div class="dummy-image" style="width: 240px; height: 240px; background: #eee"></div>
+      <div class="content fit">
+        <div class="toolbar">
+          <paper-icon-button icon="create"></paper-icon-button>
+          <paper-icon-button icon="delete"></paper-icon-button>
+          <div class="padding"></div>
+          <paper-icon-button icon="settings"></paper-icon-button>
+        </div>
+        <div class="preview">
+          <div class="dummy-image" style="width: 200px; height: 200px; background: #eee"></div>
+          <div class="brush-info">
+            <div class="brush-title">
+              1 x 1 Pencil
+            </div>
+            <div class="brush-meta">
+              1 x 1
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- </paper-header-panel> -->
   </template>
 
   <style>
@@ -52,17 +68,34 @@
       box-sizing: border-box;
       -moz-box-sizing: border-box;
 
+      width: 300px;
+      @apply(--shadow-elevation-2dp)
+
+      /*@apply(--layout-horizontal);*/
+    }
+    /*paper-header-panel {
+      width: 300px;
+      height: 300px;
+      @apply(--shadow-elevation-2dp);
+
+      --paper-header-panel {
+      }
+    }*/
+    .content {
       @apply(--layout-horizontal);
     }
     .toolbar {
-      width: 64px;
+      width: 52px;
       padding: 12px 0;
 
-      background: var(--primary-color);
+      /*background: var(--primary-color);*/
+      background: #333;
       color: var(--dark-theme-text-color);
 
       @apply(--layout-vertical);
       @apply(--layout-center);
+
+      @apply(--shadow-elevation-2dp);
     }
     /*.toolbar paper-icon-button[icon="settings"] {
       @apply(--layout-self-end);
