--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -11,9 +11,11 @@
 <link rel="import" href="../../bower_components/iron-icons/social-icons.html">
 
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/iron-dropdown/iron-dropdown.html">
 
 <link rel="import" href="../life-canvas-base/life-canvas-base.html">
 <link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
+<link rel="import" href="dropdown-wrapper.html">
 
 <dom-module id="life-brush-editor">
   <template>
@@ -40,7 +42,23 @@
 
     <div class="content">
       <div class="toolbar">
-        <paper-icon-button icon="create"></paper-icon-button>
+        <dropdown-wrapper>
+          <paper-icon-button icon="create" class="dropdown-trigger"></paper-icon-button>
+          <div class="dropdown-content">
+            foo
+          </div>
+        </dropdown-wrapper>
+        <!-- <iron-dropdown horizontal-align="right" vertical-align="top" opened>
+          <div class="dropdown-content">
+            <paper-icon-button icon="settings"></paper-icon-button>
+            <paper-icon-button icon="settings"></paper-icon-button>
+            <paper-icon-button icon="settings"></paper-icon-button>
+            <paper-icon-button icon="settings"></paper-icon-button>
+            <paper-icon-button icon="settings"></paper-icon-button>
+            <paper-icon-button icon="settings"></paper-icon-button>
+            <paper-icon-button icon="settings"></paper-icon-button>
+          </div>
+        </iron-dropdown> -->
         <paper-icon-button icon="delete"></paper-icon-button>
         <div class="padding"></div>
         <paper-icon-button icon="settings"></paper-icon-button>
