--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -45,7 +45,13 @@
         <dropdown-wrapper>
           <paper-icon-button icon="create" class="dropdown-trigger"></paper-icon-button>
           <div class="dropdown-content">
-            foo
+            <iron-icon icon="star"></iron-icon>
+            <iron-icon icon="star"></iron-icon>
+            <iron-icon icon="star"></iron-icon>
+            <iron-icon icon="star"></iron-icon>
+            <iron-icon icon="star"></iron-icon>
+            <iron-icon icon="star"></iron-icon>
+            <iron-icon icon="star"></iron-icon>
           </div>
         </dropdown-wrapper>
         <!-- <iron-dropdown horizontal-align="right" vertical-align="top" opened>
