--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -134,7 +134,7 @@
           value: function(){
             return [{
               name: '1 x 1 Pencil',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "1"
               ],
@@ -145,7 +145,7 @@
             },
             {
               name: '2 x 2 Pencil',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "11",
                 "11"
@@ -157,7 +157,7 @@
             },
             {
               name: '3 x 3 Pencil',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "111",
                 "111",
@@ -170,7 +170,7 @@
             },
             {
               name: '4 x 4 Pencil',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "1111",
                 "1111",
@@ -190,7 +190,7 @@
           value: function(){
             return [{
               name: '1 x 1 Eraser',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "-1"
               ],
@@ -201,7 +201,7 @@
             },
             {
               name: '2 x 2 Eraser',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "-1-1",
                 "-1-1"
@@ -213,7 +213,7 @@
             },
             {
               name: '3 x 3 Eraser',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "-1-1-1",
                 "-1-1-1",
@@ -226,7 +226,7 @@
             },
             {
               name: '4 x 4 Eraser',
-              thumbnail: 'dummy.png',
+              thumbnail: 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABABAMAAABYR2ztAAAAFVBMVEXu7u4zMzOnp6fW1ta/v7+QkJB5eXku6svuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAZklEQVRIie3OsQmAQAyF4UdO93gEsQ7iAMeJvaADCO6/g8HWDCCSv0rxJQTIsuzniaLjMynRAjC7IQxWqpsADAoSUw9pFAnAhsGIcsLJEgFC9fJ1iL8z2hv0qzmqxXDsiC5kWfapbpUgB70gIFoDAAAAAElFTkSuQmCC',
               payload: [
                 "-1-1-1-1",
                 "-1-1-1-1",
